# ppoteka-rainfall-prediction

./: .gitignore  README.md
poteka-data/: .gitignore  Makefile  README.md  pyproject.toml
poteka-data/EDA/other/: .gitignore  (+3 more)
poteka-data/common/: constants.py  parse_parquet.py  progress_bar.py  send_info.py  utils.py
poteka-pipeline-pytorch/: .gitignore  MLproject  Makefile  README.md  create_testdataset_json.py  main.py  pyproject.toml  run_only_evaluate.py  run_only_training.py
poteka-pipeline-pytorch/common/: config.py  custom_logger.py  data_loader.py  notify.py  omegaconf_manager.py  utils.py
poteka-pipeline-pytorch/conf/: config.yaml
poteka-pipeline-pytorch/docs/: index.html  search.js  toppage.html
poteka-pipeline-pytorch/evaluate/: MLproject
poteka-pipeline-pytorch/preprocess/: MLproject
poteka-pipeline-pytorch/reference_papers/: Self-Attention-ConvLSTM-for-Spatiotemporal-Prediction.md
poteka-pipeline-pytorch/result_analysis/: 2019-10-12-case-geoplots.ipynb  2019-10-12-highquality.ipynb  2020-09-14-geoplots.ipynb  2020-09-14-highquality.ipynb  2020-10-12-700-start-geoplots.ipynb  2020-10-12-800-start-geoplots.ipynb  geo_plot_utils.py  learning_curves.ipynb  metrics.ipynb  minmax_rmses.ipynb  poteka-distribution-map.ipynb  r2_scores.ipynb  standard_rmses.ipynb  test_case_utils.py  timeseries_plot.ipynb  timeseries_r2score.ipynb  utils.py  visualize_atention_maps.ipynb
poteka-pipeline-pytorch/scripts/: rerun_evalaute.sh  test_all_models.sh  test_run.sh  train.sh  train_all_models.sh  train_and_evaluate.sh  train_different_inputparams.sh
poteka-pipeline-pytorch/tests/: test.md
poteka-pipeline-pytorch/train/: MLproject
(+186 files in other folders)
