[tool.poetry]
name = "poteka_data_analysis"
version = "0.1.0"
description = ""
authors = ["tsugumi-sys <tidemark0105@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
pandas = "^1.4.2"
pyarrow = "^7.0.0"
joblib = "^1.1.0"
tqdm = "^4.64.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
